--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     }
   }
 
+  
+
+.graphics{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
+
 .footer {
     position: absolute;
     height: 42px;
