--- a/src/app/avaliation/dobras/jp3/jp3.component.html
+++ b/src/app/avaliation/dobras/jp3/jp3.component.html
@@ -1,97 +1,152 @@
 <div class="container">
     <div class="header">
         <h3>Jackson & Pollock (1978) - 3 dobras</h3>
-    </div> 
+    </div>
     <div class="section">
-     <form #f="ngForm" (submit)="save(f.value)">
-         <table>
-             <thead>
-                 <tr>
-                     <th>&nbsp;</th>
-                     <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
-                     <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
-                     <th class="th-top" *ngIf="addEval">
-                         <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                             style="width: 110px;">
-                     </th>
-                 </tr>
-             </thead>
-             <tbody>
-                 <tr>
-                     <th><span>Peitoral</span></th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].peitoral}}</td>
-                     <td *ngIf="pointer>=0">{{evaluation[pointer].peitoral}}</td>
-                     <td *ngIf="addEval">
-                         <input name="peitoral" #peitoral="ngModel" [(ngModel)]="newEvaluation.peitoral"
-                              type="number" step="0.1">
-                     </td>
-                 </tr>
-                 <tr>
-                     <th>Abdominal</th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
-                     <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
-                     <td *ngIf="addEval">
-                         <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
-                             type="number" step="0.1">
-                     </td>
-                 </tr>
-                 <tr>
-                     <th>Coxa</th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
-                     <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
-                     <td *ngIf="addEval">
-                         <input name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural"
-                             type="number" step="0.1">
-                     </td>
-                 </tr>
-                 <tr>
-                    <th>Media</th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_xmedia}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].c_xmedia}}</td>
-                    <td *ngIf="addEval">
-                        <input name="c_xmedia" #c_xmedia="ngModel" [(ngModel)]="newEvaluation.c_xmedia"
-                            type="number" step="0.1">
-                    </td>
-                </tr>
-                 <tr>
-                     <th>Somatório</th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_xtot}}</td>
-                     <td *ngIf="pointer>=0">{{evaluation[pointer].c_xtot}}</td>
-                     <td *ngIf="addEval">
-                         <input name="c_xtot" #c_xtot="ngModel" [(ngModel)]="newEvaluation.c_xtot"
-                             type="number" step="0.1">
-                     </td>
-                 </tr>
+        <form #f="ngForm" (submit)="save(f.value)">
+            <table>
+                <thead>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th class="th-top" *ngIf="pointer>=1">
+                            <button type="button" (click)="setEvaluation(evaluation[pointer-1], pointer-1)">
+                                {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="pointer>=0">
+                            <button type="button" (click)="setEvaluation(evaluation[pointer], pointer)">
+                                {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="addEval">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" style="width: 110px;">
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngIf="student.sexo == 'M'">
+                        <th><span>Peitoral</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peitoral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].peitoral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="peitoral" #peitoral="ngModel" [(ngModel)]="newEvaluation.peitoral"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr *ngIf="student.sexo == 'F'">
+                        <th><span>Triceps</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triceps}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].triceps}}</td>
+                        <td *ngIf="addEval">
+                            <input name="triceps" #triceps="ngModel" [(ngModel)]="newEvaluation.triceps" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr *ngIf="student.sexo == 'M'">
+                        <th>Abdominal</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
+                        <td *ngIf="addEval">
+                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr *ngIf="student.sexo == 'F'">
+                        <th>Suprailiaca</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
+                        <td *ngIf="addEval">
+                            <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Coxa</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
+                        <td *ngIf="addEval">
+                            <input name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Media</th>
+                        <td *ngIf="pointer>=1">
+                            {{(+evaluation[pointer-1].peitoral + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural) / 3 | number : '1.2-2'}}
+                        </td>
+                        <td *ngIf="pointer>=0">
+                            {{(+evaluation[pointer].peitoral + +evaluation[pointer].abdominal + +evaluation[pointer].crural) / 3 | number : '1.2-2'}}
+                        </td>
+                        <td *ngIf="addEval">
+                            <!--                         <input name="c_xmedia" #c_xmedia="ngModel" [(ngModel)]="newEvaluation.c_xmedia"
+                            type="number" step="0.1"> -->
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Somatório</th>
+                        <td *ngIf="pointer>=1">
+                            {{+evaluation[pointer-1].peitoral + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural}}
+                        </td>
+                        <td *ngIf="pointer>=0">
+                            {{+evaluation[pointer].peitoral + +evaluation[pointer].abdominal + +evaluation[pointer].crural }}
+                        </td>
+                        <td *ngIf="addEval">
+                            <!--                          <input name="c_xtot" #c_xtot="ngModel" [(ngModel)]="newEvaluation.c_xtot"
+                             type="number" step="0.1"> -->
+                        </td>
+                    </tr>
                 </tbody>
-         </table>
- 
-         <div class="action">
-             <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
-                 (click)="pointer=pointer-1">
-                 <mat-icon class="mat-14">chevron_left</mat-icon>
-             </button>
-             <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
-                 <mat-icon class="mat-18">add</mat-icon>
-             </button>
-             <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1" mat-mini-fab
-                 color="default" (click)="pointer=pointer+1">
-                 <mat-icon class="mat-14">chevron_right</mat-icon>
-             </button>
-             <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
-                 <mat-icon class="mat-18">close</mat-icon>
-             </button>
-             <button *ngIf="addEval" mat-fab>
-                 <mat-icon class="mat-18">check</mat-icon>
-             </button>
-         </div>
-     </form>
- 
- </div>
- 
- <div class="footer">
- <a mat-mini-fab color="primary" (click)="goBack()">
- <mat-icon>undo</mat-icon>
- </a>
- </div>
- </div>
- 
+            </table>
+
+            <div class="action">
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                    (click)="pointer=pointer-1">
+                    <mat-icon class="mat-14">chevron_left</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                    <mat-icon class="mat-18">add</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                    mat-mini-fab color="default" (click)="pointer=pointer+1">
+                    <mat-icon class="mat-14">chevron_right</mat-icon>
+                </button>
+                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                    <mat-icon class="mat-18">close</mat-icon>
+                </button>
+                <button *ngIf="addEval" mat-fab>
+                    <mat-icon class="mat-18">check</mat-icon>
+                </button>
+            </div>
+        </form>
+        <br />
+        <hr />
+        <h4 style="text-align: center; color: blue;">
+            {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
+        </h4>
+
+        <!-- <app-chart-dobras [chart1]="single" [chart2]="single2" [doneApp]="done" ></app-chart-dobras> -->
+        <div *ngIf="showChart">
+            <div class="graphics">
+                <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient"
+                    [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels"
+                    [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
+                    (deactivate)="onDeactivate($event)">
+                </ngx-charts-pie-chart>
+            </div>
+            <div class="graphics">
+                <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="single2"
+                    [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels"
+                    [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
+                    (deactivate)="onDeactivate($event)">
+                </ngx-charts-pie-chart>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="footer">
+        <a mat-mini-fab color="primary" (click)="goBack()">
+            <mat-icon>undo</mat-icon>
+        </a>
+    </div>
+</div>
