--- a/src/app/avaliation/dobras/will/will.component.html
+++ b/src/app/avaliation/dobras/will/will.component.html
@@ -8,8 +8,16 @@
              <thead>
                  <tr>
                      <th>&nbsp;</th>
-                     <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
-                     <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
+                     <th class="th-top" *ngIf="pointer>=1">
+                        <button type="button" (click)="setEvaluation(evaluation[pointer-1], pointer-1)">
+                            {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                        </button>
+                    </th>
+                    <th class="th-top" *ngIf="pointer>=0">
+                        <button type="button" (click)="setEvaluation(evaluation[pointer], pointer)">
+                            {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                        </button>
+                    </th>
                      <th class="th-top" *ngIf="addEval">
                          <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                              style="width: 110px;">
@@ -55,21 +63,27 @@
                 </tr>
                  <tr>
                     <th>Media</th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_xmedia}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].c_xmedia}}</td>
-                    <td *ngIf="addEval">
-                        <input name="c_xmedia" #c_xmedia="ngModel" [(ngModel)]="newEvaluation.c_xmedia"
-                            type="number" step="0.1">
+                    <td *ngIf="pointer>=1">
+                        {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular 
+                           + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].geminal) / 4 | number: '1.2-2'}}
                     </td>
+                    <td *ngIf="pointer>=0">
+                        {{(+evaluation[pointer].triciptal + +evaluation[pointer].subescapular 
+                           + +evaluation[pointer].abdominal + +evaluation[pointer].geminal) / 4 | number: '1.2-2'}}
+                    </td>
+                    <td *ngIf="addEval">&nbsp;</td>
                 </tr>
                  <tr>
                      <th>Somatório</th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_xtot}}</td>
-                     <td *ngIf="pointer>=0">{{evaluation[pointer].c_xtot}}</td>
-                     <td *ngIf="addEval">
-                         <input name="c_xtot" #c_xtot="ngModel" [(ngModel)]="newEvaluation.c_xtot"
-                             type="number" step="0.1">
-                     </td>
+                     <td *ngIf="pointer>=1">
+                        {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular 
+                           + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].geminal | number: '1.2-2'}}
+                    </td>
+                    <td *ngIf="pointer>=0">
+                        {{+evaluation[pointer].triciptal + +evaluation[pointer].subescapular 
+                           + +evaluation[pointer].abdominal + +evaluation[pointer].geminal | number: '1.2-2'}}
+                    </td>
+                     <td *ngIf="addEval">&nbsp;</td>
                  </tr>
                 </tbody>
          </table>
@@ -94,7 +108,29 @@
              </button>
          </div>
      </form>
- 
+     <br />
+     <hr />
+     <h4 style="text-align: center; color: blue;">
+         {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
+     </h4>
+
+     <!-- <app-chart-dobras [chart1]="single" [chart2]="single2" [doneApp]="done" ></app-chart-dobras> -->
+     <div *ngIf="showChart">
+         <div class="graphics">
+             <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient"
+                 [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels"
+                 [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
+                 (deactivate)="onDeactivate($event)">
+             </ngx-charts-pie-chart>
+         </div>
+         <div class="graphics">
+             <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="single2"
+                 [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels"
+                 [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
+                 (deactivate)="onDeactivate($event)">
+             </ngx-charts-pie-chart>
+         </div>
+     </div> 
  </div>
  
  <div class="footer">
