--- a/src/app/avaliation/dobras/slaugther/slaugther.component.html
+++ b/src/app/avaliation/dobras/slaugther/slaugther.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>Slaugther (1988)</h3>
+        <h3>Slaugther -2 dobras (1988)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -9,12 +9,12 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th class="th-top" *ngIf="pointer>=1">
-                            <button type="button" (click)="setEvaluation(evaluation[pointer-1], pointer-1)">
+                            <button type="button" (click)="setEvaluation(evaluation[pointer-1])">
                                 {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
                             </button>
                         </th>
                         <th class="th-top" *ngIf="pointer>=0">
-                            <button type="button" (click)="setEvaluation(evaluation[pointer], pointer)">
+                            <button type="button" (click)="setEvaluation(evaluation[pointer])">
                                 {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
                             </button>
                         </th>
@@ -61,6 +61,11 @@
                         <td *ngIf="addEval">
                         </td>
                     </tr>
+                    <tr>
+                        <td colspan="3">
+                            <small class="advise-sm">* Todas as medidas são em milimetros</small>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
 
@@ -84,28 +89,27 @@
                 </button>
             </div>
         </form>
-        <br />
-        <hr />
-        <h4 style="text-align: center; color: blue;">
-            {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
-        </h4>
-
-        <!-- <app-chart-dobras [chart1]="single" [chart2]="single2" [doneApp]="done" ></app-chart-dobras> -->
         <div *ngIf="showChart">
-            <div class="graphics">
-                <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient"
-                    [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels"
-                    [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
-                    (deactivate)="onDeactivate($event)">
-                </ngx-charts-pie-chart>
+            <br />
+            <hr />
+            <h4 style="text-align: center; color: blue;">
+                {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
+            </h4>
+            <div style="text-align: center; color: blue;">
+                <mat-label>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
+                <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
+                    [disabled]="!fatChanged" (change)="getNewEvaluation()">
+                </mat-slider>
+                <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
+                    <mat-icon>save</mat-icon>
+                </button>
             </div>
-            <div class="graphics">
-                <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="single2"
-                    [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels"
-                    [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
-                    (deactivate)="onDeactivate($event)">
-                </ngx-charts-pie-chart>
-            </div>
+
+            <app-chart-pie [values]="single"></app-chart-pie>
+            <app-chart-pie [values]="single2"></app-chart-pie>
         </div>
 
     </div>
