--- a/src/app/avaliation/dobras/wb2/wb2.component.html
+++ b/src/app/avaliation/dobras/wb2/wb2.component.html
@@ -1,123 +1,123 @@
 <div class="container">
     <div class="header">
-        <h3>Wilmore & Behnke (1969) - 2 dobras</h3>
-    </div> 
+        <h3>Wilmore & Behnke - 2 dobras (1969)</h3>
+    </div>
     <div class="section">
-     <form #f="ngForm" (submit)="save(f.value)">
-         <table>
-             <thead>
-                 <tr>
-                     <th>&nbsp;</th>
-                     <th class="th-top" *ngIf="pointer>=1">
-                        <button type="button" (click)="setEvaluation(evaluation[pointer-1], pointer-1)">
-                            {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
-                        </button>
-                    </th>
-                    <th class="th-top" *ngIf="pointer>=0">
-                        <button type="button" (click)="setEvaluation(evaluation[pointer], pointer)">
-                            {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
-                        </button>
-                    </th>
-                     <th class="th-top" *ngIf="addEval">
-                         <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                             style="width: 110px;">
-                     </th>
-                 </tr>
-             </thead>
-             <tbody>
-                <tr>
-                    <th>Abdominal</th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
-                    <td *ngIf="addEval">
-                        <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
-                            type="number" step="0.1">
-                    </td>
-                </tr>
-                <tr>
-                    <th><span>Coxa</span></th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
-                    <td *ngIf="addEval">
-                        <input name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural"
-                             type="number" step="0.1">
-                    </td>
-                </tr>
-                 <tr>
-                    <th>Media</th>
-                    <td *ngIf="pointer>=1">
-                        {{(+evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural) / 2 | number: '1.2-2'}}
-                    </td>
-                    <td *ngIf="pointer>=0">
-                        {{(+evaluation[pointer].abdominal + +evaluation[pointer].crural) / 2 | number: '1.2-2'}}
-                    </td>
-                    <td *ngIf="addEval">&nbsp;</td>
-                </tr>
-                 <tr>
-                     <th>Somatório</th>
-                     <td *ngIf="pointer>=1">
-                        {{+evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural | number: '1.2-2'}}
-                    </td>
-                    <td *ngIf="pointer>=0">
-                        {{+evaluation[pointer].abdominal + +evaluation[pointer].crural | number: '1.2-2'}}
-                    </td>
-                    <td *ngIf="addEval">&nbsp;</td>
-                 </tr>
+        <form #f="ngForm" (submit)="save(f.value)">
+            <table>
+                <thead>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th class="th-top" *ngIf="pointer>=1">
+                            <button type="button" (click)="setEvaluation(evaluation[pointer-1])">
+                                {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="pointer>=0">
+                            <button type="button" (click)="setEvaluation(evaluation[pointer])">
+                                {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="addEval">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
+                                style="width: 110px;">
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Abdominal</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
+                        <td *ngIf="addEval">
+                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th><span>Coxa</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
+                        <td *ngIf="addEval">
+                            <input name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Media</th>
+                        <td *ngIf="pointer>=1">
+                            {{(+evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural) / 2 | number: '1.2-2'}}
+                        </td>
+                        <td *ngIf="pointer>=0">
+                            {{(+evaluation[pointer].abdominal + +evaluation[pointer].crural) / 2 | number: '1.2-2'}}
+                        </td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th>Somatório</th>
+                        <td *ngIf="pointer>=1">
+                            {{+evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural | number: '1.2-2'}}
+                        </td>
+                        <td *ngIf="pointer>=0">
+                            {{+evaluation[pointer].abdominal + +evaluation[pointer].crural | number: '1.2-2'}}
+                        </td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">
+                            <small class="advise-sm">* Todas as medidas são em milimetros</small>
+                        </td>
+                    </tr>
                 </tbody>
-         </table>
- 
-         <div class="action">
-             <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
-                 (click)="pointer=pointer-1">
-                 <mat-icon class="mat-14">chevron_left</mat-icon>
-             </button>
-             <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
-                 <mat-icon class="mat-18">add</mat-icon>
-             </button>
-             <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1" mat-mini-fab
-                 color="default" (click)="pointer=pointer+1">
-                 <mat-icon class="mat-14">chevron_right</mat-icon>
-             </button>
-             <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
-                 <mat-icon class="mat-18">close</mat-icon>
-             </button>
-             <button *ngIf="addEval" mat-fab>
-                 <mat-icon class="mat-18">check</mat-icon>
-             </button>
-         </div>
-     </form>
-     <br />
-     <hr />
-     <h4 style="text-align: center; color: blue;">
-         {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
-     </h4>
+            </table>
 
-     <!-- <app-chart-dobras [chart1]="single" [chart2]="single2" [doneApp]="done" ></app-chart-dobras> -->
-     <div *ngIf="showChart">
-         <div class="graphics">
-             <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient"
-                 [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels"
-                 [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
-                 (deactivate)="onDeactivate($event)">
-             </ngx-charts-pie-chart>
-         </div>
-         <div class="graphics">
-             <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="single2"
-                 [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels"
-                 [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
-                 (deactivate)="onDeactivate($event)">
-             </ngx-charts-pie-chart>
-         </div>
-     </div> 
- </div>
- 
- <div class="footer">
- <a mat-mini-fab color="primary" (click)="goBack()">
- <mat-icon>undo</mat-icon>
- </a>
- </div>
- </div>
- 
+            <div class="action">
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                    (click)="pointer=pointer-1">
+                    <mat-icon class="mat-14">chevron_left</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                    <mat-icon class="mat-18">add</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                    mat-mini-fab color="default" (click)="pointer=pointer+1">
+                    <mat-icon class="mat-14">chevron_right</mat-icon>
+                </button>
+                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                    <mat-icon class="mat-18">close</mat-icon>
+                </button>
+                <button *ngIf="addEval" mat-fab>
+                    <mat-icon class="mat-18">check</mat-icon>
+                </button>
+            </div>
+        </form>
+        <div *ngIf="showChart">
+            <br />
+            <hr />
+            <h4 style="text-align: center; color: blue;">
+                {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
+            </h4>
+            <div style="text-align: center; color: blue;">
+                <mat-label>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
+                <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
+                    [disabled]="!fatChanged" (change)="getNewEvaluation()">
+                </mat-slider>
+                <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
+                    <mat-icon>save</mat-icon>
+                </button>
+            </div>
 
+            <app-chart-pie [values]="single"></app-chart-pie>
+            <app-chart-pie [values]="single2"></app-chart-pie>
+        </div>
+    </div>
 
-
+    <div class="footer">
+        <a mat-mini-fab color="primary" (click)="goBack()">
+            <mat-icon>undo</mat-icon>
+        </a>
+    </div>
+</div>
