--- a/src/app/avaliation/dobras/guedes/guedes.component.html
+++ b/src/app/avaliation/dobras/guedes/guedes.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>Guedes - 3 dobras (1994)</h3>
+        <h3 i18n>Guedes - 3 dobras (1994)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -26,7 +26,7 @@
                 </thead>
                 <tbody>
                     <tr *ngIf="sexo=='M'">
-                        <th>Triciptal</th>
+                        <th i18n>Triciptal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                         <td *ngIf="addEval">
@@ -35,7 +35,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="sexo=='F'">
-                        <th><span>Subescapular</span></th>
+                        <th i18n>Subescapular</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
                         <td *ngIf="addEval">
@@ -44,7 +44,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Suprailiaca</th>
+                        <th i18n>Suprailiaca</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
                         <td *ngIf="addEval">
@@ -53,7 +53,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="sexo=='M'">
-                        <th>Abdominal</th>
+                        <th i18n>Abdominal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
                         <td *ngIf="addEval">
@@ -62,7 +62,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="sexo=='F'">
-                        <th>Coxa</th>
+                        <th i18n>Coxa</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
                         <td *ngIf="addEval">
@@ -71,7 +71,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Media</th>
+                        <th i18n>Media</th>
                         <td *ngIf="pointer>=1 && sexo=='M'">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].suprailiaca
                            + +evaluation[pointer-1].abdominal) / 3 | number: '1.2-2'}}</td>
@@ -87,7 +87,7 @@
                         <td *ngIf="addEval">&nbsp; </td>
                     </tr>
                     <tr>
-                        <th>Somatório</th>
+                        <th i18n>Somatório</th>
                         <td *ngIf="pointer>=1 && sexo=='M'">
                             {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].suprailiaca
                            + +evaluation[pointer-1].abdominal | number: '1.2-2'}}</td>
@@ -104,7 +104,7 @@
                     </tr>
                     <tr>
                         <td colspan="3">
-                            <small class="advise-sm">* Todas as medidas são em milimetros</small>
+                            <small class="advise-sm" i18n>* Todas as medidas são em milimetros</small>
                         </td>
                     </tr>
                 </tbody>
@@ -136,6 +136,18 @@
             <h4 style="text-align: center; color: blue;">
                 {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
             </h4>
+            <div style="text-align: center; color: blue;">
+                <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
+                <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
+                    [disabled]="!fatChanged" (change)="getNewEvaluation()">
+                </mat-slider>
+                <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
+                    <mat-icon>save</mat-icon>
+                </button>
+            </div>
             <app-chart-pie [values]="single"></app-chart-pie>
             <app-chart-pie [values]="single2"></app-chart-pie>
         </div>
