--- a/src/app/avaliation/dobras/dw4/dw4.component.html
+++ b/src/app/avaliation/dobras/dw4/dw4.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>Durnin @ Womersley - 4 dobras (1974)</h3>
+        <h3 i18n>Durnin @ Womersley - 4 dobras (1974)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -26,7 +26,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th><span>Triciptal</span></th>
+                        <th i18n>Triciptal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                         <td *ngIf="addEval">
@@ -35,7 +35,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Subescapular</th>
+                        <th i18n>Subescapular</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
                         <td *ngIf="addEval">
@@ -44,7 +44,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Biciptal</th>
+                        <th i18n>Biciptal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].biciptal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].biciptal}}</td>
                         <td *ngIf="addEval">
@@ -53,7 +53,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Suprailiaca</th>
+                        <th i18n>Suprailiaca</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
                         <td *ngIf="addEval">
@@ -62,7 +62,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Média</th>
+                        <th i18n>Média</th>
                         <td *ngIf="pointer>=1">
                             {{(+evaluation[pointer-1].biciptal + +evaluation[pointer-1].triciptal 
                             + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].suprailiaca) / 4 | number: '1.2-2'}}
@@ -74,7 +74,7 @@
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th>Somatório</th>
+                        <th i18n>Somatório</th>
                         <td *ngIf="pointer>=1">
                             {{+evaluation[pointer-1].biciptal + +evaluation[pointer-1].triciptal 
                             + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].suprailiaca| number: '1.2-2'}}
@@ -87,7 +87,7 @@
                     </tr>
                     <tr>
                         <td colspan="3">
-                            <small class="advise-sm">* Todas as medidas são em milimetros</small>
+                            <small class="advise-sm" i18n>* Todas as medidas são em milimetros</small>
                         </td>
                     </tr>
                 </tbody>
@@ -120,7 +120,7 @@
                 {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
             </h4>
             <div style="text-align: center; color: blue;">
-                <mat-label>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
+                <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
                 <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
                     [disabled]="!fatChanged" (change)="getNewEvaluation()">
                 </mat-slider>
