--- a/src/app/avaliation/dobras/jp7/jp7.component.html
+++ b/src/app/avaliation/dobras/jp7/jp7.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>Jackson & Pollock - 7 dobras (1978)</h3>
+        <h3 i18n>Jackson & Pollock - 7 dobras (1978)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -26,7 +26,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th>Triciptal</th>
+                        <th i18n>Triciptal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                         <td *ngIf="addEval">
@@ -35,7 +35,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Subescapular</th>
+                        <th i18n>Subescapular</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
                         <td *ngIf="addEval">
@@ -44,7 +44,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Peitoral</th>
+                        <th i18n>Peitoral</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].peitoral}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].peitoral}}</td>
                         <td *ngIf="addEval">
@@ -53,7 +53,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Axilar</th>
+                        <th i18n>Axilar</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].axilar}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].axilar}}</td>
                         <td *ngIf="addEval">
@@ -62,7 +62,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Suprailiaca</th>
+                        <th i18n>Suprailiaca</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
                         <td *ngIf="addEval">
@@ -71,7 +71,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Abdominal</th>
+                        <th i18n>Abdominal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
                         <td *ngIf="addEval">
@@ -80,7 +80,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th><span>Coxa</span></th>
+                        <th i18n>Coxa</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
                         <td *ngIf="addEval">
@@ -90,7 +90,7 @@
                     </tr>
 
                     <tr>
-                        <th>Media</th>
+                        <th i18n>Media</th>
                         <td *ngIf="pointer>=1">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].peitoral 
                                + +evaluation[pointer-1].axilar + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].abdominal 
@@ -103,7 +103,7 @@
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th>Somatório</th>
+                        <th i18n>Somatório</th>
                         <td *ngIf="pointer>=1">
                             {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].peitoral 
                                + +evaluation[pointer-1].axilar + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].abdominal 
@@ -118,7 +118,7 @@
                     </tr>
                     <tr>
                         <td colspan="3">
-                            <small class="advise-sm">* Todas as medidas são em milimetros</small>
+                            <small class="advise-sm" i18n>* Todas as medidas são em milimetros</small>
                         </td>
                     </tr>
                 </tbody>
@@ -151,7 +151,7 @@
                 {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
             </h4>
             <div style="text-align: center; color: blue;">
-                <mat-label>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
+                <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
                 <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
                     [disabled]="!fatChanged" (change)="getNewEvaluation()">
                 </mat-slider>
