--- a/src/app/avaliation/dobras/pb4/pb4.component.html
+++ b/src/app/avaliation/dobras/pb4/pb4.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>Petroski - Brasileiros 4 Dobras (1995)</h3>
+        <h3 i18n>Petroski - Brasileiros 4 Dobras (1995)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -26,7 +26,7 @@
                 </thead>
                 <tbody>
                     <tr *ngIf="sex=='M'">
-                        <th><span>Triciptal</span></th>
+                        <th i18n>Triciptal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                         <td *ngIf="addEval">
@@ -35,7 +35,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="sex=='M'">
-                        <th>Subescapular</th>
+                        <th i18n>Subescapular</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
                         <td *ngIf="addEval">
@@ -44,7 +44,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="sex=='F'">
-                        <th>Axilar</th>
+                        <th i18n>Axilar</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].axilar}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].axilar}}</td>
                         <td *ngIf="addEval">
@@ -53,7 +53,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="sex=='F'">
-                        <th><span>Coxa</span></th>
+                        <th i18n><span>Coxa</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
                         <td *ngIf="addEval">
@@ -62,7 +62,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Geminal</th>
+                        <th i18n>Geminal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].geminal}}</td>
                         <td *ngIf="addEval">
@@ -71,7 +71,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Suprailiaca</th>
+                        <th i18n>Suprailiaca</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
                         <td *ngIf="addEval">
@@ -80,7 +80,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Media</th>
+                        <th i18n>Media</th>
                         <td *ngIf="pointer>=1 && sex=='M'">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
                           + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca) / 4 | number: '1.2-2' }}
@@ -100,7 +100,7 @@
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th>Somatório</th>
+                        <th i18n>Somatório</th>
                         <td *ngIf="pointer>=1 && sex=='M'">
                             {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
                            + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca | number: '1.2-2' }}
@@ -121,7 +121,7 @@
                     </tr>
                     <tr>
                         <td colspan="3">
-                            <small class="advise-sm">* Todas as medidas são em milimetros</small>
+                            <small class="advise-sm" i18n>* Todas as medidas são em milimetros</small>
                         </td>
                     </tr>
                 </tbody>
@@ -154,7 +154,7 @@
                 {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
             </h4>
             <div style="text-align: center; color: blue;">
-                <mat-label>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
+                <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
                 <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
                     [disabled]="!fatChanged" (change)="getNewEvaluation()">
                 </mat-slider>
