--- a/src/app/avaliation/dobras/slaugther/slaugther.component.html
+++ b/src/app/avaliation/dobras/slaugther/slaugther.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>Slaugther -2 dobras (1988)</h3>
+        <h3 i18n>Slaugther -2 dobras (1988)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -25,7 +25,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th><span>Triciptal</span></th>
+                        <th i18n>Triciptal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                         <td *ngIf="addEval">
@@ -34,7 +34,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Geminal</th>
+                        <th i18n>Geminal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].geminal}}</td>
                         <td *ngIf="addEval">
@@ -43,7 +43,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Media</th>
+                        <th i18n>Media</th>
                         <td *ngIf="pointer>=1">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].geminal)/2 | number: '1.2-2' }}
                         </td>
@@ -54,7 +54,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Somatório</th>
+                        <th i18n>Somatório</th>
                         <td *ngIf="pointer>=1">{{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].geminal}}
                         </td>
                         <td *ngIf="pointer>=0">{{+evaluation[pointer].triciptal + +evaluation[pointer].geminal}}</td>
@@ -63,7 +63,7 @@
                     </tr>
                     <tr>
                         <td colspan="3">
-                            <small class="advise-sm">* Todas as medidas são em milimetros</small>
+                            <small class="advise-sm" i18n>* Todas as medidas são em milimetros</small>
                         </td>
                     </tr>
                 </tbody>
@@ -96,7 +96,7 @@
                 {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
             </h4>
             <div style="text-align: center; color: blue;">
-                <mat-label>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
+                <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
                 <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
                     [disabled]="!fatChanged" (change)="getNewEvaluation()">
                 </mat-slider>
