--- a/src/app/avaliation/dobras/sloan/sloan.component.html
+++ b/src/app/avaliation/dobras/sloan/sloan.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>SLOAN - 2 dobras (1967)</h3>
+        <h3 i18n>SLOAN - 2 dobras (1967)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -26,7 +26,7 @@
                 </thead>
                 <tbody>
                     <tr *ngIf="sexo=='M'">
-                        <th><span>Subescapular</span></th>
+                        <th i18n>Subescapular</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
                         <td *ngIf="addEval">
@@ -35,7 +35,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="sexo=='F'">
-                        <th><span>Tricipital</span></th>
+                        <th i18n>Tricipital</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].tricipital}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].tricipital}}</td>
                         <td *ngIf="addEval">
@@ -44,7 +44,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="sexo=='M'">
-                        <th>Coxa</th>
+                        <th i18n>Coxa</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
                         <td *ngIf="addEval">
@@ -53,7 +53,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="sexo=='F'">
-                        <th>Suprailiaca</th>
+                        <th i18n>Suprailiaca</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].Suprailiaca}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].Suprailiaca}}</td>
                         <td *ngIf="addEval">
@@ -62,7 +62,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Media</th>
+                        <th i18n>Media</th>
                         <td *ngIf="pointer>=1 && sexo =='M'">
                             {{(+evaluation[pointer-1].subescapular + +evaluation[pointer-1].crural) / 2 |number: '1.2-2'}}
                         </td>
@@ -78,7 +78,7 @@
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th>Somatório</th>
+                        <th i18n>Somatório</th>
                         <td *ngIf="pointer>=1 && sexo =='M'">
                             {{+evaluation[pointer-1].subescapular + +evaluation[pointer-1].crural |number: '1.2-2'}}
                         </td>
@@ -95,7 +95,7 @@
                     </tr>
                     <tr>
                         <td colspan="3">
-                            <small class="advise-sm">* Todas as medidas são em milimetros</small>
+                            <small class="advise-sm" i18n>* Todas as medidas são em milimetros</small>
                         </td>
                     </tr>
                 </tbody>
@@ -128,7 +128,7 @@
                 {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
             </h4>
             <div style="text-align: center; color: blue;">
-                <mat-label>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
+                <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
                 <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
                     [disabled]="!fatChanged" (change)="getNewEvaluation()">
                 </mat-slider>
