--- a/src/app/avaliation/dobras/wb2/wb2.component.html
+++ b/src/app/avaliation/dobras/wb2/wb2.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>Wilmore & Behnke - 2 dobras (1969)</h3>
+        <h3 i18n>Wilmore & Behnke - 2 dobras (1969)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -26,7 +26,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th>Abdominal</th>
+                        <th i18n>Abdominal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
                         <td *ngIf="addEval">
@@ -35,7 +35,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th><span>Coxa</span></th>
+                        <th i18n>Coxa</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
                         <td *ngIf="addEval">
@@ -44,7 +44,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Media</th>
+                        <th i18n>Media</th>
                         <td *ngIf="pointer>=1">
                             {{(+evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural) / 2 | number: '1.2-2'}}
                         </td>
@@ -54,7 +54,7 @@
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th>Somatório</th>
+                        <th i18n>Somatório</th>
                         <td *ngIf="pointer>=1">
                             {{+evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural | number: '1.2-2'}}
                         </td>
@@ -65,7 +65,7 @@
                     </tr>
                     <tr>
                         <td colspan="3">
-                            <small class="advise-sm">* Todas as medidas são em milimetros</small>
+                            <small class="advise-sm" i18n>* Todas as medidas são em milimetros</small>
                         </td>
                     </tr>
                 </tbody>
@@ -98,7 +98,7 @@
                 {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
             </h4>
             <div style="text-align: center; color: blue;">
-                <mat-label>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
+                <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
                 <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
                     [disabled]="!fatChanged" (change)="getNewEvaluation()">
                 </mat-slider>
