--- a/src/app/avaliation/dobras/will/will.component.html
+++ b/src/app/avaliation/dobras/will/will.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3>Williams - 4 dobras (1992)</h3>
+        <h3 i18n>Williams - 4 dobras (1992)</h3>
     </div> 
     <div class="section">
      <form #f="ngForm" (submit)="save(f.value)">
@@ -26,7 +26,7 @@
              </thead>
              <tbody>
                 <tr>
-                    <th><span>Triciptal</span></th>
+                    <th i18n>Triciptal</th>
                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                     <td *ngIf="addEval">
@@ -35,7 +35,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th><span>Subescapular</span></th>
+                    <th i18n>Subescapular</th>
                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
                     <td *ngIf="addEval">
@@ -44,7 +44,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>Abdominal</th>
+                    <th i18n>Abdominal</th>
                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
                     <td *ngIf="addEval">
@@ -53,7 +53,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th><span>Geminal</span></th>
+                    <th i18n>Geminal</th>
                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].geminal}}</td>
                     <td *ngIf="addEval">
@@ -62,7 +62,7 @@
                     </td>
                 </tr>
                  <tr>
-                    <th>Media</th>
+                    <th i18n>Media</th>
                     <td *ngIf="pointer>=1">
                         {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular 
                            + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].geminal) / 4 | number: '1.2-2'}}
@@ -74,7 +74,7 @@
                     <td *ngIf="addEval">&nbsp;</td>
                 </tr>
                  <tr>
-                     <th>Somatório</th>
+                     <th i18n>Somatório</th>
                      <td *ngIf="pointer>=1">
                         {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular 
                            + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].geminal | number: '1.2-2'}}
@@ -87,7 +87,7 @@
                  </tr>
                  <tr>
                     <td colspan="3">
-                        <small class="advise-sm">* Todas as medidas são em milimetros</small>
+                        <small class="advise-sm" i18n>* Todas as medidas são em milimetros</small>
                     </td>
                 </tr>
                 </tbody>
@@ -120,7 +120,7 @@
             {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
         </h4>
         <div style="text-align: center; color: blue;">
-            <mat-label>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
+            <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
             <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
                 [disabled]="!fatChanged" (change)="getNewEvaluation()">
             </mat-slider>
